--- a/index.html
+++ b/index.html
@@ -548,6 +548,36 @@
           A cute raccoon playing guitar in a boat on the ocean
         </div>
       </div>
+      <!-- video 4 -->
+      <div class="carousel-item">
+        <div class="d-flex justify-content-center video-wrapper">
+          <div class="video-container">
+            <div class="text-box">WV</div>
+            <video class="d-block w-100" autoplay muted loop>
+              <source src="videos/ablate_datasets/wv_An Iron man is playing the electronic guitar, high electronic guitar.-1.mp4"
+                type="video/mp4">
+            </video>
+          </div>
+          <div class="video-container">
+            <div class="text-box">VG + WV</div>
+            <video class="d-block w-100" autoplay muted loop>
+              <source src="videos/ablate_datasets/our_An Iron man is playing the electronic guitar, high electronic guitar.-1.mp4"
+                type="video/mp4">
+            </video>
+          </div>
+          <a class="carousel-control-prev" href="#videoCarouselIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#videoCarouselIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="carousel-caption">
+          An Iron man is playing the electronic guitar, high electronic guitar.
+        </div>
+      </div>
       <!-- Add more carousel items as needed -->
     </div>
   </div>
@@ -629,7 +659,7 @@
         <div class="carousel-item active">
           <div class="d-flex justify-content-center video-wrapper">
             <div class="video-container">
-              <div class="text-box">Before</div>
+              <div class="text-box">w/o MG</div>
               <video class="d-block w-100" autoplay muted loop>
                 <source
                   src="videos/ablate_motion/no_motion_A sophisticated chimpanzee in a tweed jacket and glasses ponders over a chessboard-1.mp4"
@@ -637,7 +667,7 @@
               </video>
             </div>
             <div class="video-container">
-              <div class="text-box">After</div>
+              <div class="text-box">w/ MG</div>
               <video class="d-block w-100" autoplay muted loop>
                 <source
                   src="videos/ablate_motion/w_motion_A sophisticated chimpanzee in a tweed jacket and glasses ponders over a chessboard-1.mp4"
