--- a/index.html
+++ b/index.html
@@ -578,6 +578,36 @@
           An Iron man is playing the electronic guitar, high electronic guitar.
         </div>
       </div>
+      <!-- video 5 -->
+      <div class="carousel-item">
+        <div class="d-flex justify-content-center video-wrapper">
+          <div class="video-container">
+            <div class="text-box">WV</div>
+            <video class="d-block w-100" autoplay muted loop>
+              <source src="videos/ablate_datasets/wv_An astronaut is riding a horse in the space in a photorealistic style.-1.mp4"
+                type="video/mp4">
+            </video>
+          </div>
+          <div class="video-container">
+            <div class="text-box">VG + WV</div>
+            <video class="d-block w-100" autoplay muted loop>
+              <source src="videos/ablate_datasets/our_An astronaut is riding a horse in the space in a photorealistic style.-1.mp4"
+                type="video/mp4">
+            </video>
+          </div>
+          <a class="carousel-control-prev" href="#videoCarouselIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#videoCarouselIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="carousel-caption">
+          An astronaut is riding a horse in the space in a photorealistic style.
+        </div>
+      </div>
       <!-- Add more carousel items as needed -->
     </div>
   </div>
