--- a/index.html
+++ b/index.html
@@ -212,16 +212,58 @@
                 </div>
               </span>
             </div>
-            <div class="button-container">
-              <!-- <a href="https://arxiv.org/abs/2407.08737" class="btn btn-outline-secondary"> -->
-              <i class="fa-solid fa-file-pdf"></i> Paper
-              </a>
-              <!-- <a href="https://github.com/Ji4chenLi/t2v-turbo" class="btn btn-outline-secondary"> -->
-              <i class="fa-brands fa-github"></i> Code
-              </a>
-              <!-- <a href="https://huggingface.co/jiachenli-ucsb/T2V-Turbo-VC2" class="btn btn-outline-secondary"> -->
-              <i class="fa-solid fa-laptop"></i> Demo
-              </a>
+            <div class="column has-text-centered">
+              <div class="publication-links">
+                <!-- PDF Link. -->
+                <span class="link-block">
+                  <a target="_blank" href="https://t2v-turbo-v2.github.io/"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Paper</span>
+                  </a>
+                </span>
+                <span class="link-block">
+                  <a target="_blank" href="https://t2v-turbo-v2.github.io/"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                    </span>
+                    <span>ArXiv</span>
+                  </a>
+                </span>
+                <!-- Code Link. -->
+                <span class="link-block">
+                  <a target="_blank" href="https://github.com/Ji4chenLi/t2v-turbo"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>Code</span>
+                  </a>
+                </span>
+
+                <span class="link-block">
+                  <a href="https://huggingface.co/collections/jiachenli-ucsb/t2v-turbo-v2-67063359f83fded3443e371e" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      🤗
+                    </span>
+                    <span>Model Weights</span>
+                  </a>
+                </span>
+
+                <span class="link-block">
+                  <a href="https://t2v-turbo-v2.github.io/" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      🤗
+                    </span>
+                    <span>Huggingface Space</span>
+                  </a>
+                </span>
+              </div>
             </div>
           </div>
 
@@ -554,14 +596,16 @@
           <div class="video-container">
             <div class="text-box">WV</div>
             <video class="d-block w-100" autoplay muted loop>
-              <source src="videos/ablate_datasets/wv_An Iron man is playing the electronic guitar, high electronic guitar.-1.mp4"
+              <source
+                src="videos/ablate_datasets/wv_An Iron man is playing the electronic guitar, high electronic guitar.-1.mp4"
                 type="video/mp4">
             </video>
           </div>
           <div class="video-container">
             <div class="text-box">VG + WV</div>
             <video class="d-block w-100" autoplay muted loop>
-              <source src="videos/ablate_datasets/our_An Iron man is playing the electronic guitar, high electronic guitar.-1.mp4"
+              <source
+                src="videos/ablate_datasets/our_An Iron man is playing the electronic guitar, high electronic guitar.-1.mp4"
                 type="video/mp4">
             </video>
           </div>
@@ -584,14 +628,16 @@
           <div class="video-container">
             <div class="text-box">WV</div>
             <video class="d-block w-100" autoplay muted loop>
-              <source src="videos/ablate_datasets/wv_An astronaut is riding a horse in the space in a photorealistic style.-1.mp4"
+              <source
+                src="videos/ablate_datasets/wv_An astronaut is riding a horse in the space in a photorealistic style.-1.mp4"
                 type="video/mp4">
             </video>
           </div>
           <div class="video-container">
             <div class="text-box">VG + WV</div>
             <video class="d-block w-100" autoplay muted loop>
-              <source src="videos/ablate_datasets/our_An astronaut is riding a horse in the space in a photorealistic style.-1.mp4"
+              <source
+                src="videos/ablate_datasets/our_An astronaut is riding a horse in the space in a photorealistic style.-1.mp4"
                 type="video/mp4">
             </video>
           </div>
@@ -1004,24 +1050,31 @@
     </section>
 
 
-<footer class="footer">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="column is-8">
-        <div class="content">
-          <p style="text-align: center">
-            Website templated borrowed from <a href="vader-vid.github.io">Vader</a> and <a href="https://nerfies.github.io/">Nerfies.</a>
-          </p>
+    <footer class="footer">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-8">
+            <div class="content">
+              <p style="text-align: center">
+                Website templated borrowed from <a href="vader-vid.github.io">Vader</a> and <a
+                  href="https://nerfies.github.io/">Nerfies.</a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</footer>
+    </footer>
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
 
 </body>
 
