update demo link

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </span>
 
                 <span class="link-block">
-                  <a href="https://t2v-turbo-v2.github.io/" target="_blank"
+                  <a href="https://huggingface.co/spaces/TIGER-Lab/T2V-Turbo-V2/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       🤗
