--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a target="_blank" href="https://t2v-turbo-v2.github.io/"
+                  <a target="_blank" href="https://arxiv.org/abs/2410.05677/"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -235,7 +235,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a target="_blank" href="https://github.com/Ji4chenLi/t2v-turbo"
+                  <a target="_blank" href="https://arxiv.org/pdf/2410.05677"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
