--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
 
   <link rel="icon" href="./favicon.ico?">
 
-
-
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   <meta property="og:image:width" content="1600" />
@@ -212,6 +210,11 @@
                 </div>
               </span>
             </div>
+
+            <div class="is-size-5 publication-authors">
+              <span class="author-block"><b style="color:#000; font-weight:normal"> <b>ICLR 2024</b> </b></span>
+            </div>
+
             <div class="column has-text-centered">
               <div class="publication-links">
                 <!-- PDF Link. -->
@@ -1039,13 +1042,13 @@
     <section class="section" id="BibTeX">
       <div class="container is-max-desktop content">
         <h2 class="title">BibTeX</h2>
-        <pre><code>@misc{li2024t2vturbo,
-    title={T2V-Turbo-v2: Enhancing Video Generation Model Post-Training Through Data, Reward, and Conditional Guidance Design},
-    author={Jiachen Li and Long Qian and Jian Zheng and Xiaofeng Gao and Robinson Piramuthu and Wenhu Chen and William Yang Wang},
-    journal={ARXIV},
-    year={2024}
-  }
-        </code></pre>
+        <pre><code>@inproceedings{li2024t2vturbov2,
+    title={T2V-Turbo-v2: Enhancing Video Generation Model Post-Training through Data, Reward, and Conditional Guidance Design},
+    author={Jiachen Li and Qian Long and Jian Zheng and Xiaofeng Gao and Robinson Piramuthu and Wenhu Chen and William Yang Wang},
+    booktitle={The Thirteenth International Conference on Learning Representations},
+    year={2025},
+    url={https://openreview.net/forum?id=BZwXMqu4zG}
+}</code></pre>
       </div>
     </section>
 
